kubernetes/argo_workflows/argo_server_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: argo
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - "--auth-mode=server"
            - "--secure=false"
          readinessProbe:
            httpGet:
              port: 2746
              scheme: HTTP
